<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MobiStego</string>
    <string name="slogan">your message hider</string>
    <string name="enter_text">Enter your text&#8230;</string>
    <string name="enter_password">Enter your password&#8230;</string>
    <string name="action_settings">Settings</string>
    <string name="ok">Ok</string>
    <string name="encode">Encode</string>
    <string name="decode">Decode</string>
    <string name="pict_photo">Pict</string>
    <string name="take_photo">Take</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="send">Send&#8230;</string>
    <string name="encoding">Encoding message</string>
    <string name="decoding">Decoding message</string>
    <string name="loading">Loading, please wait&#8230;</string>
    <string name="sure_delete">Do you want delete this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="abort">Abort</string>
    <string name="no_mobistego_image">Sorry, this is not a MobiStego image</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="choose">Choose</string>
    <string name="hidden">Hidden message:</string>
    <array name="operations">
        <item>Encode from camera</item>
        <item>Encode from gallery</item>
        <item>Decode from gallery</item>
    </array>
    <string name="add">+</string>
    <string name="no_permission">No permissions granted</string>
    <string name="try_decode">Try to decode</string>
    <string name="wrong_password">Wrong password</string>

</resources>