<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="2dp"
        android:background="#282829"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#83bc0d"
            android:textStyle="italic" />

        <!--<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textStyle="italic"
            android:textSize="12dp"
            android:text="not only an image" />-->

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/slogan"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFF"
            android:textStyle="italic" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_list_view">

            <ListView
                android:id="@+id/list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:columnWidth="90dp"
                android:gravity="center"
                android:horizontalSpacing="10dp"
                android:numColumns="auto_fit"
                android:stretchMode="columnWidth"
                android:verticalSpacing="10dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#c0000b"
        android:contentDescription="@string/add"
        android:src="@drawable/fab" />

    <!--
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/material_blue_grey_800">

            <ImageButton
                android:id="@+id/main_button_pick_photo_decode"
                android:layout_weight="1"
                android:src="@drawable/photo_32"
                android:background="@color/material_blue_grey_800"
                android:layout_width="match_parent"
                android:layout_gravity="right"
                android:layout_height="wrap_content"
                android:text="@string/decode" />

            <ImageButton
                android:id="@+id/main_button_take_photo"
                android:layout_gravity="left"
                android:src="@drawable/add_camera_32"
                android:background="@color/material_blue_grey_800"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/take_photo" />

            <ImageButton
                android:id="@+id/main_button_pick_photo"
                android:layout_weight="1"
                android:src="@drawable/image"
                android:background="@color/material_blue_grey_800"
                android:layout_width="match_parent"
                android:layout_gravity="right"
                android:layout_height="wrap_content"
                android:text="@string/pict_photo" />

        </LinearLayout>-->

</RelativeLayout>